--- a/wrangler.toml
+++ b/wrangler.toml
@@ -21,6 +21,6 @@ enabled = true
 # - https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 # Note: Use secrets to store sensitive data.
 # - https://developers.cloudflare.com/workers/configuration/secrets/
-# [vars]
+[vars]
 LAT = "59.8586"
 LON = "17.6389"
